src/FirestoreRulesParser.ts
// Generated from ./src/FirestoreRules.g4 by ANTLR 4.7.3-SNAPSHOT
import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import * as Utils from 'antlr4ts/misc/Utils';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import { FirestoreRulesListener } from './FirestoreRulesListener';
import { FirestoreRulesVisitor } from './FirestoreRulesVisitor';



// import { RuleVersion } from "antlr4ts/RuleVersion";

export class FirestoreRulesParser extends Parser {

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return FirestoreRulesParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "FirestoreRules.g4"; }

	// @Override
	public get ruleNames(): string[] { return FirestoreRulesParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return FirestoreRulesParser._serializedATN; }
	public static get _ATN(): ATN {
		if (!FirestoreRulesParser.__ATN) {
			FirestoreRulesParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(FirestoreRulesParser._serializedATN));
		}

		return FirestoreRulesParser.__ATN;
	}
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly Match = 26;
	public static readonly If = 27;
	public static readonly True = 28;
	public static readonly False = 29;
	public static readonly List = 30;
	public static readonly Get = 31;
	public static readonly Create = 32;
	public static readonly Update = 33;
	public static readonly Read = 34;
	public static readonly Write = 35;
	public static readonly Delete = 36;
	public static readonly Return = 37;
	public static readonly Null = 38;
	public static readonly ObjectReference = 39;
	public static readonly Number = 40;
	public static readonly String = 41;
	public static readonly Identifier = 42;
	public static readonly Slash = 43;
	public static readonly WS = 44;
	public static readonly Comment = 45;
	public static readonly RULE_service = 0;
	public static readonly RULE_namespace = 1;
	public static readonly RULE_namespaceBlock = 2;
	public static readonly RULE_matchBlock = 3;
	public static readonly RULE_allowKey = 4;
	public static readonly RULE_allow = 5;
	public static readonly RULE_pathVariableReplace = 6;
	public static readonly RULE_pathVariable = 7;
	public static readonly RULE_arguments = 8;
	public static readonly RULE_function = 9;
	public static readonly RULE_expression = 10;
	public static readonly RULE_compareOperator = 11;
	public static readonly RULE_get = 12;
	public static readonly RULE_functionCall = 13;
	public static readonly RULE_booleanValue = 14;
	public static readonly RULE_getPath = 15;
	public static readonly RULE_matchPath = 16;
	public static readonly RULE_matcher = 17;
	public static readonly RULE_additionExp = 18;
	public static readonly RULE_multiplyExp = 19;
	public static readonly RULE_atomExp = 20;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"service", "namespace", "namespaceBlock", "matchBlock", "allowKey", "allow", 
		"pathVariableReplace", "pathVariable", "arguments", "function", "expression", 
		"compareOperator", "get", "functionCall", "booleanValue", "getPath", "matchPath", 
		"matcher", "additionExp", "multiplyExp", "atomExp",
	];

	public static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'service'", "'{'", "'}'", "'allow'", "','", "':'", "';'", 
		"'$('", "')'", "'='", "'**'", "'function'", "'('", "'<'", "'=='", "'>'", 
		"'!='", "'&&'", "'||'", "'.'", "'['", "']'", "'+'", "'-'", "'*'", "'match'", 
		"'if'", "'true'", "'false'", "'list'", "'get'", "'create'", "'update'", 
		"'read'", "'write'", "'delete'", "'return'", "'null'", undefined, undefined, 
		undefined, undefined, "'/'",
	];
	public static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "Match", "If", 
		"True", "False", "List", "Get", "Create", "Update", "Read", "Write", "Delete", 
		"Return", "Null", "ObjectReference", "Number", "String", "Identifier", 
		"Slash", "WS", "Comment",
	];

	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(FirestoreRulesParser._LITERAL_NAMES, FirestoreRulesParser._SYMBOLIC_NAMES, []);

	public static __ATN: ATN;


	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(FirestoreRulesParser._ATN, this);
	}
	// @RuleVersion(0)
	public service(): ServiceContext {
		const _localctx: ServiceContext = new ServiceContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, FirestoreRulesParser.RULE_service);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 42;
			this.match(FirestoreRulesParser.T__0);
			this.state = 43;
			this.namespace();
			this.state = 44;
			this.namespaceBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public namespace(): NamespaceContext {
		const _localctx: NamespaceContext = new NamespaceContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, FirestoreRulesParser.RULE_namespace);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 46;
			_la = this._input.LA(1);
			if (!(_la === FirestoreRulesParser.ObjectReference || _la === FirestoreRulesParser.Identifier)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public namespaceBlock(): NamespaceBlockContext {
		const _localctx: NamespaceBlockContext = new NamespaceBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, FirestoreRulesParser.RULE_namespaceBlock);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 48;
			this.match(FirestoreRulesParser.T__1);
			this.state = 54;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FirestoreRulesParser.T__11 || _la === FirestoreRulesParser.Match || _la === FirestoreRulesParser.Comment) {
				{
				this.state = 52;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case FirestoreRulesParser.Match:
					{
					this.state = 49;
					this.matcher();
					}
					break;
				case FirestoreRulesParser.Comment:
					{
					this.state = 50;
					this.match(FirestoreRulesParser.Comment);
					}
					break;
				case FirestoreRulesParser.T__11:
					{
					this.state = 51;
					this.function();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 56;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 57;
			this.match(FirestoreRulesParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public matchBlock(): MatchBlockContext {
		const _localctx: MatchBlockContext = new MatchBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, FirestoreRulesParser.RULE_matchBlock);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 59;
			this.match(FirestoreRulesParser.T__1);
			this.state = 66;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FirestoreRulesParser.T__3) | (1 << FirestoreRulesParser.T__11) | (1 << FirestoreRulesParser.Match))) !== 0) || _la === FirestoreRulesParser.Comment) {
				{
				this.state = 64;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case FirestoreRulesParser.T__3:
					{
					this.state = 60;
					this.allow();
					}
					break;
				case FirestoreRulesParser.Match:
					{
					this.state = 61;
					this.matcher();
					}
					break;
				case FirestoreRulesParser.Comment:
					{
					this.state = 62;
					this.match(FirestoreRulesParser.Comment);
					}
					break;
				case FirestoreRulesParser.T__11:
					{
					this.state = 63;
					this.function();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 68;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 69;
			this.match(FirestoreRulesParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public allowKey(): AllowKeyContext {
		const _localctx: AllowKeyContext = new AllowKeyContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, FirestoreRulesParser.RULE_allowKey);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 71;
			_la = this._input.LA(1);
			if (!(((((_la - 30)) & ~0x1F) === 0 && ((1 << (_la - 30)) & ((1 << (FirestoreRulesParser.List - 30)) | (1 << (FirestoreRulesParser.Get - 30)) | (1 << (FirestoreRulesParser.Create - 30)) | (1 << (FirestoreRulesParser.Update - 30)) | (1 << (FirestoreRulesParser.Read - 30)) | (1 << (FirestoreRulesParser.Write - 30)) | (1 << (FirestoreRulesParser.Delete - 30)))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public allow(): AllowContext {
		const _localctx: AllowContext = new AllowContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, FirestoreRulesParser.RULE_allow);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 73;
			this.match(FirestoreRulesParser.T__3);
			this.state = 74;
			this.allowKey();
			this.state = 79;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FirestoreRulesParser.T__4) {
				{
				{
				this.state = 75;
				this.match(FirestoreRulesParser.T__4);
				this.state = 76;
				this.allowKey();
				}
				}
				this.state = 81;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 85;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FirestoreRulesParser.T__5) {
				{
				this.state = 82;
				this.match(FirestoreRulesParser.T__5);
				this.state = 83;
				this.match(FirestoreRulesParser.If);
				this.state = 84;
				this.expression(0);
				}
			}

			this.state = 87;
			this.match(FirestoreRulesParser.T__6);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pathVariableReplace(): PathVariableReplaceContext {
		const _localctx: PathVariableReplaceContext = new PathVariableReplaceContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, FirestoreRulesParser.RULE_pathVariableReplace);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 89;
			this.match(FirestoreRulesParser.T__7);
			this.state = 90;
			_la = this._input.LA(1);
			if (!(((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & ((1 << (FirestoreRulesParser.ObjectReference - 39)) | (1 << (FirestoreRulesParser.Number - 39)) | (1 << (FirestoreRulesParser.String - 39)) | (1 << (FirestoreRulesParser.Identifier - 39)))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 91;
			this.match(FirestoreRulesParser.T__8);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pathVariable(): PathVariableContext {
		const _localctx: PathVariableContext = new PathVariableContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, FirestoreRulesParser.RULE_pathVariable);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 93;
			this.match(FirestoreRulesParser.T__1);
			this.state = 94;
			this.match(FirestoreRulesParser.Identifier);
			this.state = 97;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FirestoreRulesParser.T__9) {
				{
				this.state = 95;
				this.match(FirestoreRulesParser.T__9);
				this.state = 96;
				this.match(FirestoreRulesParser.T__10);
				}
			}

			this.state = 99;
			this.match(FirestoreRulesParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arguments(): ArgumentsContext {
		const _localctx: ArgumentsContext = new ArgumentsContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, FirestoreRulesParser.RULE_arguments);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 102;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FirestoreRulesParser.Identifier) {
				{
				this.state = 101;
				this.match(FirestoreRulesParser.Identifier);
				}
			}

			this.state = 108;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FirestoreRulesParser.T__4) {
				{
				{
				this.state = 104;
				this.match(FirestoreRulesParser.T__4);
				this.state = 105;
				this.match(FirestoreRulesParser.Identifier);
				}
				}
				this.state = 110;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function(): FunctionContext {
		const _localctx: FunctionContext = new FunctionContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, FirestoreRulesParser.RULE_function);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this.match(FirestoreRulesParser.T__11);
			this.state = 112;
			this.match(FirestoreRulesParser.Identifier);
			this.state = 113;
			this.match(FirestoreRulesParser.T__12);
			this.state = 114;
			this.arguments();
			this.state = 115;
			this.match(FirestoreRulesParser.T__8);
			this.state = 116;
			this.match(FirestoreRulesParser.T__1);
			this.state = 117;
			this.match(FirestoreRulesParser.Return);
			this.state = 118;
			this.expression(0);
			this.state = 119;
			this.match(FirestoreRulesParser.T__6);
			this.state = 120;
			this.match(FirestoreRulesParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expression(): ExpressionContext;
	public expression(_p: number): ExpressionContext;
	// @RuleVersion(0)
	public expression(_p?: number): ExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		const _parentctx: ParserRuleContext = this._ctx;
		const _parentState: number = this.state;
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, _parentState);
		let _prevctx: ExpressionContext = _localctx;
		const _startState: number = 20;
		this.enterRecursionRule(_localctx, 20, FirestoreRulesParser.RULE_expression, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 135;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				{
				this.state = 123;
				this.match(FirestoreRulesParser.Null);
				}
				break;

			case 2:
				{
				this.state = 124;
				this.match(FirestoreRulesParser.String);
				}
				break;

			case 3:
				{
				this.state = 125;
				this.match(FirestoreRulesParser.Number);
				}
				break;

			case 4:
				{
				this.state = 126;
				this.booleanValue();
				}
				break;

			case 5:
				{
				this.state = 127;
				this.match(FirestoreRulesParser.ObjectReference);
				}
				break;

			case 6:
				{
				this.state = 128;
				this.get();
				}
				break;

			case 7:
				{
				this.state = 129;
				this.functionCall();
				}
				break;

			case 8:
				{
				this.state = 130;
				this.match(FirestoreRulesParser.Identifier);
				}
				break;

			case 9:
				{
				this.state = 131;
				this.match(FirestoreRulesParser.T__12);
				this.state = 132;
				this.expression(0);
				this.state = 133;
				this.match(FirestoreRulesParser.T__8);
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 143;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionContext(_parentctx, _parentState);
					this.pushNewRecursionContext(_localctx, _startState, FirestoreRulesParser.RULE_expression);
					this.state = 137;
					if (!(this.precpred(this._ctx, 9))) {
						throw new FailedPredicateException(this, "this.precpred(this._ctx, 9)");
					}
					this.state = 138;
					this.compareOperator();
					this.state = 139;
					this.expression(10);
					}
					}
				}
				this.state = 145;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public compareOperator(): CompareOperatorContext {
		const _localctx: CompareOperatorContext = new CompareOperatorContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, FirestoreRulesParser.RULE_compareOperator);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 146;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FirestoreRulesParser.T__13) | (1 << FirestoreRulesParser.T__14) | (1 << FirestoreRulesParser.T__15) | (1 << FirestoreRulesParser.T__16) | (1 << FirestoreRulesParser.T__17) | (1 << FirestoreRulesParser.T__18))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public get(): GetContext {
		const _localctx: GetContext = new GetContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, FirestoreRulesParser.RULE_get);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 148;
			this.match(FirestoreRulesParser.Get);
			this.state = 149;
			this.match(FirestoreRulesParser.T__12);
			this.state = 150;
			this.getPath();
			this.state = 151;
			this.match(FirestoreRulesParser.T__8);
			this.state = 152;
			this.match(FirestoreRulesParser.T__19);
			{
			this.state = 153;
			_la = this._input.LA(1);
			if (!(_la === FirestoreRulesParser.ObjectReference || _la === FirestoreRulesParser.Identifier)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 157;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				{
				this.state = 154;
				this.match(FirestoreRulesParser.T__20);
				this.state = 155;
				_la = this._input.LA(1);
				if (!(((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & ((1 << (FirestoreRulesParser.ObjectReference - 39)) | (1 << (FirestoreRulesParser.Number - 39)) | (1 << (FirestoreRulesParser.String - 39)))) !== 0))) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 156;
				this.match(FirestoreRulesParser.T__21);
				}
				break;
			}
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionCall(): FunctionCallContext {
		const _localctx: FunctionCallContext = new FunctionCallContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, FirestoreRulesParser.RULE_functionCall);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 159;
			this.match(FirestoreRulesParser.Identifier);
			this.state = 160;
			this.match(FirestoreRulesParser.T__12);
			this.state = 161;
			this.arguments();
			this.state = 162;
			this.match(FirestoreRulesParser.T__8);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public booleanValue(): BooleanValueContext {
		const _localctx: BooleanValueContext = new BooleanValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, FirestoreRulesParser.RULE_booleanValue);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 164;
			_la = this._input.LA(1);
			if (!(_la === FirestoreRulesParser.True || _la === FirestoreRulesParser.False)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}
